--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.7.1",
     "sonner": "^2.0.7",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.2.1"
